--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-		<header>
+
 		<main class="slides">
 			<!--intro-->
   		<section class="section-1 section">
@@ -23,8 +23,10 @@
 						  <li><h2>passions</h2></li>
 							<li>I am passionate about understanding words; their meanings; their origins and usages.</li>
 							<li>I am passionate about solving problems. Understanding where they went wrong. Finding solutions.</li>
-							<hr>
-												<!--describing interests-->
+						</ul>
+						<hr>
+						<ul>
+							<!--describing interests-->
 							<li>I am interested in technology. I love new gadgets and systems.</li>
 							<li>My interests in behavior. Whether it be human or animal or machine.</li>
 							<li><h2>interests</h2></li>
@@ -32,11 +34,11 @@
   		</section>
 			<!--portfolio-->
   		<section class="section-3 section">
-    		<h2>portfolio</h3>
+    		<h2>portfolio</h2>
 				  <p>coming soon</p>
-				</div>
+
   		</section>
-			<!--contact--->
+			<!--contact-->
   		<section class="section-4 section">
 					<ol>
 						<li><h2>contacts</h2></li>
