--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<!-- behind the scenes sheet -->
   <head>
     <meta charset="UTF-8">
@@ -45,7 +45,7 @@
 						<li><h3><a href="">linkedin</a></h3></li>
 						<li><h3><a href="https://github.com/daamnathaniel">github</a></h3></li>
 					</ol>
-					<h4>
+
   		</section>
 	</main>
 
