--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 			<!--intro-->
   		<section class="section-1 section">
 				  <!--who I am, where i am located-->
+
 					<h1>I am <em>Nathaniel Adam</em>. I am from <em>Dallas</em>, and I am a studying <em>software engineering</em>.</h1>
+					<p>scroll right...</p>
   		</section>
 			<!--about me-->
   		<section class="section-2 section">
