--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 		<main class="slides">
 			<!--intro-->
-  		<section class="section-1 section">
+  		<section class="section-1 section intro">
 				  <!--who I am, where i am located-->
 
 					<h1>I am <em>Nathaniel Adam</em>. I am from <em>Dallas</em>, and I am a studying <em>software engineering</em>.</h1>
 					<p>scroll right...</p>
   		</section>
 			<!--about me-->
-  		<section class="section-2 section">
+  		<section class="section-2 section aboutme">
 						<!--description showing passion-->
 					  <ul>
 						  <li><h2>passions</h2></li>
@@ -35,13 +35,17 @@
 						</ul>
   		</section>
 			<!--portfolio-->
-  		<section class="section-3 section">
+  		<section class="section-3 section portfolio">
     		<h2>portfolio</h2>
 				  <p>coming soon</p>
 
+  							<div class="gallery">
+  							<a target="_blank" href="img/self_image2.jpg"><img src="img/self_image2.jpg" alt="me" width="600" height="400"></a>
+
+
   		</section>
 			<!--contact-->
-  		<section class="section-4 section">
+  		<section class="section-4 section contact">
 					<ol>
 						<li><h2>contacts</h2></li>
 						<li><h3><a href="">linkedin</a></h3></li>
