--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						  <li><h2>passions</h2></li>
 							<li>I am passionate about understanding words; their meanings; their origins and usages.</li>
 							<li>I am passionate about solving problems. Understanding where they went wrong. Finding solutions.</li>
+						<li>I have always loved computers. I love learning and working with them. I have a passion for web developement. And cannot wait to be part of a team of developers wherein I can learn different techniques and skills.</li>
 						</ul>
 						<hr>
 						<ul>
@@ -42,13 +43,13 @@
   							<div class="gallery">
   							<a target="_blank" href="img/self_image2.jpg"><img src="img/self_image2.jpg" alt="me" width="600" height="400"></a>
 
-
+							</div>
   		</section>
 			<!--contact-->
   		<section class="section-4 section contact">
 					<ol>
 						<li><h2>contacts</h2></li>
-						<li><h3><a href="">linkedin</a></h3></li>
+						<li><h3><a href="https://www.linkedin.com/in/nathaniel-king-b76851202/">linkedin</a></h3></li>
 						<li><h3><a href="https://github.com/daamnathaniel">github</a></h3></li>
 					</ol>
 
